Who knows, left align, fix form feild

--- a/assets/css/grcstyle.css
+++ b/assets/css/grcstyle.css
@@ -62,8 +62,11 @@ border: solid 1px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-left: 1rem;}
+    justify-content: left;
+    margin-left: 1rem;
+    background-color: #ddd;
+    border-radius: 25%;
+}
 
 .body-content1  {
         display: flex;
